--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
+
 :root {
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
@@ -9,19 +10,20 @@
 }
 
 body {
-  background-color: #f7f7f7;
+  background-color: #bbca78;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   margin: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Montserrat';
 }
 
 .container {
   margin: 30px auto;
-  width: 350px;
+  padding: 20px;
+  background-color: #82b95e;
 }
 
 h1 {
@@ -41,7 +43,7 @@ h4 {
 }
 
 .inc-exp-container {
-  background-color: #fff;
+  background-color: rgb(168, 216, 153);
   box-shadow: var(--box-shadow);
   padding: 20px;
   display: flex;
@@ -65,7 +67,7 @@ h4 {
 }
 
 .money.plus {
-  color: #2ecc71;
+  color: #0db453;
 }
 
 .money.minus {
@@ -89,8 +91,8 @@ input[type='number'] {
 
 .btn {
   cursor: pointer;
-  background-color: #9c88ff;
-  box-shadow: var(--box-shadow);
+  background-color: purple;
+  box-shadow:  2px var(--box-shadow);
   color: #fff;
   border: 0;
   display: block;
@@ -105,6 +107,19 @@ input[type='number'] {
   outline: 0;
 }
 
+.btn:hover {
+  background-color: rgb(158, 106, 158);
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  text-shadow: 1px 1px 2px #427388; 
+}
+.delete-btn:hover {
+ background-color: rgb(117, 11, 11);
+ border: 1px solid;
+ box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+}
 .list {
   list-style-type: none;
   padding: 0;
@@ -123,36 +138,25 @@ input[type='number'] {
 }
 
 .list li.plus {
-  border-right: 5px solid #2ecc71;
+  background-color:  #8ee2b1;
 }
 
 .list li.minus {
-  border-right: 5px solid #c0392b;
+  background-color: #e6877c;
 }
-.delete{
-    /* padding-right: 100000px; */
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
+
 .delete-btn {
   cursor: pointer;
   background-color: #e74c3c;
   border: 0;
   color: #fff;
-  font-size: 20px;
+  font-size: 25px;
   line-height: 20px;
   padding: 2px 5px;
-  position: absolute;
-  top: 50%;
-  left: 0;
+  position: absolute; 
+   top: 50%;
+  left: 112%;
   transform: translate(-100%, -50%);
-  opacity: 0;
   transition: opacity 0.3s ease;
 }
 
@@ -160,8 +164,25 @@ input[type='number'] {
   opacity: 1;
 }
 
-@media (max-width: 320px) {
-  .container {
-    width: 300px;
-  }
+.balance {
+  background-color: beige;
+  box-shadow: var(--box-shadow);
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.deletex {
+  color: red;
+  cursor: pointer;
+  left:100%;
+  font-size: 13px;
+  margin-left: 300px;
+  border: none;
+  background-color: #eee4d7;
+}
+.deletex:hover{
+  border: 1px solid;
+ box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
 }
